# pomi

./: CMakeLists.txt
include/: bme280.h  byte.h  gy30.h  i2cdevice.hpp  mcp3201.h  rdsoil3.hpp  sensordata.hpp  spidevice.hpp
src/: bme280.cpp  gy30.cpp  i2cdevice.cpp  pomi.cpp  sensordata.cpp  spidevice.cpp
